# personalive_client

./: .gitignore  Animage.spec  README.md  config.py  enums.py  main.py  pyproject.toml  requirements.txt
core/: webcam_capture.py  websocket_client.py
gui/: main_window.py  output_window.py
gui/widgets/: connection_panel.py  log_panel.py  reference_panel.py  stats_panel.py  stream_panel.py  webcam_panel.py
utils/: image_utils.py  logging_utils.py
